--- a/cestdumeleze.nuspec
+++ b/cestdumeleze.nuspec
@@ -6,5 +6,7 @@
     <authors>Nicolas Moyère</authors>
     <description>Meleze.Web is a toolbox to optimize ASP.NET MVC 3.0 application. It provides HTML Minification of Razor views and caching of the returned pages.</description>
     <projectUrl>http://cestdumeleze.net/</projectUrl>
+    <licenseUrl>http://cestdumeleze.net/license.txt</licenseUrl>
+    <tags>ASP.NET-MVC MVC Razor</tags>
   </metadata>
 </package>
