Build a signed version that can be installed in the GAC to make Intelliscense work correctly in Visual Studio (otherwise it does not find the factory dll)

--- a/Meleze.Web/Meleze.Web.csproj
+++ b/Meleze.Web/Meleze.Web.csproj
@@ -30,6 +30,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>MelezeGACKey.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -47,10 +53,15 @@
     <Compile Include="Mvc\LocalRequestFilterAttribute.cs" />
     <Compile Include="Mvc\TimestampedCacheAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Razor\MinifyHtmlVBCodeGenerator.cs" />
     <Compile Include="Razor\MinifyHtmlCodeGenerator.cs" />
+    <Compile Include="Razor\MinifyHtmlCSharpCodeGenerator.cs" />
     <Compile Include="Razor\MinifyHtmlMvcWebPageRazorHost.cs" />
     <Compile Include="Razor\MinifyHtmlWebRazorHostFactory.cs" />
     <Compile Include="Sprites\SpriteGenerator.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="MelezeGACKey.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
