--- a/cestdumeleze4.nuspec
+++ b/cestdumeleze4.nuspec
@@ -5,13 +5,13 @@
     <version>1.4.5</version>
     <authors>Nicolas Moyère</authors>
     <description>
-      Meleze.Web is a toolbox to optimize ASP.NET MVC 3.0 and MVC 4.0 applications.
+      Meleze.Web is a toolbox to optimize ASP.NET MVC 3.0, MVC 4.0 and MVC 5.0 applications.
       It provides HTML, JS and CSS minification of Razor views and caching of the returned pages.
 
-      The package version 1.4.x targets ASP.NET MVC 4.0. Use version 1.3.x for MVC 3.0.
+      The package version 1.4.x targets ASP.NET MVC 4.0 and 5.0. Use version 1.3.x for MVC 3.0.
     </description>
     <projectUrl>https://github.com/meleze/Meleze.Web</projectUrl>
-    <licenseUrl>http://cestdumeleze.net/license.txt</licenseUrl>
-    <tags>ASP.NET-MVC MVC MVC3 MVC4 Razor HTML compression minification minify javascript js css</tags>
+    <licenseUrl>https://raw.github.com/meleze/Meleze.Web/master/license.txt</licenseUrl>
+    <tags>ASP.NET-MVC MVC MVC3 MVC4 MV5 Razor HTML compression minification minify javascript js css</tags>
   </metadata>
 </package>
